Verif/Test/Invalide/test_erreur_3.81-5.deca
// Description:
//    Programme soulevant l'erreur (3.81)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'float' et 'type_null' sont incompatibles avec l'opérateur binaire '&&' (règle 3.81)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean var;
{
   var = 1.0 && null;
}